syntax = "proto3";

package mizer.settings;

service SettingsApi {
  rpc LoadSettings (RequestSettings) returns (Settings) {}
}

message RequestSettings {}

message Settings {
  Hotkeys hotkeys = 1;
}

message Hotkeys {
  map<string, string> global = 1;
  map<string, string> layouts = 2;
  map<string, string> programmer = 3;
  map<string, string> nodes = 4;
  map<string, string> patch = 5;
  map<string, string> sequencer = 6;
  map<string, string> plan = 7;
}
